--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@phosphor-icons/react": "^2.1.7",
     "eslint-config-prettier": "^10.1.2",
     "eslint-plugin-tailwindcss": "^3.18.0",
     "next": "15.3.1",
